# ChangeLog for media-sound/audacious
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-sound/audacious/ChangeLog,v 1.296 2014/01/28 14:09:59 ago Exp $

*audacious-3.5.2 (01 Nov 2014)

  01 Nov 2014; Poncho <poncho@spahan.ch> +audacious-3.5.2.ebuild,
  -audacious-3.5.1.ebuild:
  media-sound/audacious: version bump

*audacious-3.5.1 (01 Aug 2014)

  01 Aug 2014; Poncho <poncho@spahan.ch> +audacious-3.5.1.ebuild,
  -audacious-3.5.ebuild, metadata.xml:
  media-sound/audacious: version bump

*audacious-3.5 (24 Apr 2014)

  24 Apr 2014; Poncho <poncho@spahan.ch> +audacious-3.5.ebuild,
  -audacious-3.4.3.ebuild, -audacious-3.5_beta1.ebuild:
  media-sound/audacious: version bump

  28 Jan 2014; Agostino Sarubbo <ago@gentoo.org> audacious-3.4.1.ebuild:
  Stable for alpha, wrt bug #490463

  28 Jan 2014; Agostino Sarubbo <ago@gentoo.org> audacious-3.4.1.ebuild:
  Stable for ppc64, wrt bug #490463

  28 Jan 2014; Agostino Sarubbo <ago@gentoo.org> audacious-3.4.1.ebuild:
  Stable for ppc, wrt bug #490463

  28 Jan 2014; Agostino Sarubbo <ago@gentoo.org> audacious-3.4.1.ebuild:
  Stable for x86, wrt bug #490463

  28 Jan 2014; Agostino Sarubbo <ago@gentoo.org> audacious-3.4.1.ebuild:
  Stable for amd64, wrt bug #490463

  26 Jan 2014; Agostino Sarubbo <ago@gentoo.org> audacious-3.4.1.ebuild:
  Stable for sparc, wrt bug #490463

  24 Jan 2014; Jeroen Roovers <jer@gentoo.org> audacious-3.4.1.ebuild:
  Stable for HPPA (bug #490463).

  26 Dec 2013; Markus Meier <maekke@gentoo.org> audacious-3.4.1.ebuild:
  add ~arm, bug #489350

*audacious-3.4.1 (02 Sep 2013)

  02 Sep 2013; Jeff Horelick <jdhore@gentoo.org> +audacious-3.4.1.ebuild:
  Version bump.

*audacious-3.3.4 (07 Feb 2013)

  07 Feb 2013; Jeff Horelick <jdhore@gentoo.org> +audacious-3.3.4.ebuild,
  -audacious-3.3.2.ebuild, -audacious-3.3.ebuild:
  Version bump

  07 Jan 2013; Sergey Popov <pinkbyte@gentoo.org> audacious-3.3.3.ebuild: