@@ -1,1 +1,1 @@
-DIST audacious-3.5.2.tar.bz2 448436 SHA256 3915b9692ef8acb2588b0e26c2738e59e36766cfe83e7e52c0e601688e6c1956 SHA512 70fd5bf81fd86a867102917c9328e1e647e9566ecfbc773b15fe0d181f176cfb333976c817493b1e485f15a045da054f19a9d6d81106d55636fca14ac09f8008 WHIRLPOOL 9f85ed502f061ad6f9d2b47b4d384e2a24d4cb960fed10fe32e8eaadf93fbeec7dd25090180af079e1d490712dfe39e7584c8b260903e4231463a84dd804cdbc
+DIST audacious-3.6-alpha1-gtk3.tar.bz2 520461 SHA256 be1c973e7fc02e96923440616f431a18690601cd7014a90de515a38e789c3040 SHA512 f9b9c924706fdc2acecd0b9fcea10f27e2c383b0912c2d7751ec102df557a3089825d668482683f0dac9e7efe194027021ac4cbeb2011a3175f65c7a665d44fe WHIRLPOOL 6db137519607f05b1265ff7017922b12aa03b629b05012e77ea3c9f1c843377a0eae064e7e40230a4ae6ea8ccbda585e80acee6644ac7753d3b5dadea994cc4c
