@@ -5,7 +5,7 @@
 EAPI=5
 inherit eutils
 
-MY_P="${P/_/-}"
+MY_P="${P/_/-}-gtk3"
 S="${WORKDIR}/${MY_P}"
 DESCRIPTION="Audacious Player - Your music, your way, no exceptions"
 HOMEPAGE="http://audacious-media-player.org/"
@@ -29,7 +29,7 @@ DEPEND="${RDEPEND}
 	chardet? ( >=app-i18n/libguess-1.2 )
 	nls? ( dev-util/intltool )"
 
-PDEPEND="~media-plugins/audacious-plugins-3.5.2"
+PDEPEND="~media-plugins/audacious-plugins-3.6_alpha1"
 
 src_configure() {
 	# D-Bus is a mandatory dependency, remote control,
@@ -39,8 +39,10 @@ src_configure() {
 	# Bugs #197894, #199069, #207330, #208606
 	econf \
 		--enable-dbus \
+		--enable-gtk \
 		$(use_enable chardet) \
-		$(use_enable nls)
+		$(use_enable nls) \
+		--disable-qt
 }
 
 src_install() {
