@@ -2,6 +2,12 @@
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
 # $Header: /var/cvsroot/gentoo-x86/media-sound/audacious/ChangeLog,v 1.296 2014/01/28 14:09:59 ago Exp $
 
+*audacious-3.6_alpha1 (12 Dec 2014)
+
+  12 Dec 2014; Poncho <poncho@spahan.ch> +audacious-3.6_alpha1.ebuild,
+  -audacious-3.5.2.ebuild:
+  media-sound/audacious: version bump
+
 *audacious-3.5.2 (01 Nov 2014)
 
   01 Nov 2014; Poncho <poncho@spahan.ch> +audacious-3.5.2.ebuild,
